2014-10-28  Richard Biener  <rguenther@suse.de>

PR middle-end/63665
	* fold-const.c (fold_comparison): Properly guard simplifying
	against INT_MAX/INT_MIN with !TYPE_OVERFLOW_WRAPS.

	* gcc.dg/pr63665.c: New testcase.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@216781 138bc75d-0d04-0410-961f-82ee72b054a4